# cosim

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.py
.github/workflows/: build.yml
cosimpy/: lib.py  setup.py
data/fmus/dp_ship/: SystemStructure.ssd
data/fmus/dp_ship/Ship/: modelDescription.xml
data/fmus/dp_ship/Ship/binaries/win64/: OSOM.lib  ShipCrane.lib  Waves.lib
data/fmus/dp_ship/ThMPC/: modelDescription.xml
data/fmus/dp_ship/ThMPC/binaries/win64/: ThMPC.lib
data/fmus/dp_ship_proxy/: LogConfig.xml  SystemStructure.ssd
data/ssp/quarter_truck/: ChartConfig.xml  LogConfig.xml
examples/: CMakeLists.txt
examples/controlled_temperature/: common.hpp
examples/dp_ship/: dp_ship.cpp  dp_ship_proxy.cpp  load_fmu.cpp
examples/gunnerus/trajectory/: ChartConfig.xml  LogConfig.xml  gunnerus_trajectory.cpp  scenario.xml  trajectory.py
examples/quarter_truck/: quarter_truck.cpp  quarter_truck.py  quarter_truck_ssp.cpp  quarter_truck_sspgen.py
include/cosim/: connection.hpp  cosim.h  lib_info.hpp  model.hpp  model_instance.hpp  model_resolver.hpp  property.hpp  scalar.hpp  simulation.hpp  simulation_runner.hpp  variable_identifier.hpp
include/cosim/algorithm/: algorithm.hpp  fixed_step_algorithm.hpp
include/cosim/listeners/: csv_writer.hpp  simulation_listener.hpp
include/cosim/logger/: logger.hpp
include/cosim/scenario/: scenario.hpp  scenario_loader.hpp
include/cosim/ssp/: ssp_loader.hpp
include/cosim/structure/: simulation_structure.hpp
resources/plot/: ecos_cosim.py
resources/schema/: ChartConfig.xsd  LogConfig.xsd  ScenarioConfig.xsd
src/: CMakeLists.txt
src/cosim/: cosim.cpp  lib_info.cpp.in  model_resolver.cpp  simulation.cpp  simulation_runner.cpp
src/cosim/algorithm/: fixed_step_algorithm.cpp
src/cosim/fmi/: fmi_model.hpp  fmi_model_instance.hpp  fmi_model_sub_resolver.cpp  fmi_model_sub_resolver.hpp
src/cosim/fmi/proxy/: proxy_model.hpp  proxy_model_sub_resolver.cpp  proxy_model_sub_resolver.hpp
src/cosim/listeners/: csv_writer.cpp  simulation_listener.cpp
src/cosim/logger/: logger.cpp
src/cosim/scenario/: scenario.cpp  scenario_loader_xml.cpp
src/cosim/ssp/: ssp.cpp  ssp.hpp  ssp_loader.cpp
src/cosim/structure/: simulation_structure.cpp
src/cosim/util/: temp_dir.cpp  temp_dir.hpp  unzipper.cpp  unzipper.hpp  uuid.cpp  uuid.hpp
src/fmilibcpp/: buffered_slave.hpp  fmicontext.hpp  fmu.cpp  fmu.hpp  model_description.cpp  model_description.hpp  scalar_variable.cpp  scalar_variable.hpp  slave.hpp
src/fmilibcpp/fmi1/: fmi1_fmu.cpp  fmi1_fmu.hpp  fmi1_model_description.hpp  fmi1_slave.cpp  fmi1_slave.hpp
src/fmilibcpp/fmi2/: fmi2_fmu.cpp  fmi2_fmu.hpp  fmi2_model_description.hpp  fmi2_slave.cpp  fmi2_slave.hpp
src/proxyfmu/: CMakeLists.txt  process_helper.hpp
tests/: CMakeLists.txt
tests/cosim/: CMakeLists.txt  test_clib.cpp  test_connection.cpp  test_property.cpp  test_runner.cpp  test_ssp_parser.cpp  test_unzipper.cpp  test_variable_identifier.cpp
tool/cli/: CMakeLists.txt  main.cpp
tool/proxyfmu/: CMakeLists.txt  proxyfmu.cpp
tool/proxyfmu/handlers/: boot_service_handler.cpp  boot_service_handler.hpp
